Mise à jour du projet portail-doctorat